Numbers and collapse was corrected

--- a/one-cgiar-front/src/app/pages/stages-container/stages-menu.component.scss
+++ b/one-cgiar-front/src/app/pages/stages-container/stages-menu.component.scss
@@ -19,6 +19,8 @@
     top: 0;
     left: 0;
     z-index: -100;
+    // filter: brightness(2);
+    opacity: .7;
 }
 .initiative-container {
     padding: 2rem 4rem 0 4rem;
