--- a/one-cgiar-front/src/app/shared/components/menu/menu.component.scss
+++ b/one-cgiar-front/src/app/shared/components/menu/menu.component.scss
@@ -7,12 +7,12 @@
     background-color: cyan;
 }
 .menu{
-    padding: 50px 70px;
+    padding: 50px 25px;
     width: 400px;
-    height: 100%;
+    height: calc(100vh - 120px);
     max-height: calc(100vh - 120px);
     overflow-y: scroll;
-    background-color: rgba(128, 128, 128, 0.479);
+    background-color: #00000063;
     color: white;
 
     //new menu with animations
@@ -20,13 +20,14 @@
         cursor: pointer;
         margin-top: 12px;
         .stage-section-title{
-            margin-bottom: 5px;
+            // margin-bottom: 20px;
             font-weight: 700;
             font-size: 1.3em;
             width: 100%;
-            background-color: #013243 ;
+            // background-color: #013243 ;
+            border-bottom: 1px solid white;
             padding: 10px;
-            border-radius: 50px;
+            border-radius: 10px;
             text-align: center;
         }
         .stage-section-subSections{
@@ -35,10 +36,15 @@
               margin-left: 10px;
               position: relative;
               margin-bottom: 15px;
+              display: flex;
+              .subSection-title{
+
+              }
               .number{
-                position: absolute;
+                position: relative;
                 top: -5px;
-                left: -40px;
+                // left: -40px;
+                min-width: 30px;
                 width: 30px;
                 height: 30px;
                 border-radius: 30px;
@@ -47,6 +53,7 @@
                 text-align: center;
                 vertical-align: middle;
                 padding-top: 2px;
+                margin-right: 10px;
             }
           }  
         }
@@ -128,19 +135,19 @@
   
   /* Track */
   .menu::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: #00000063; 
     border-radius: 30px;
   }
    
   /* Handle */
   .menu::-webkit-scrollbar-thumb {
-    background: #025c7a; 
+    background: #818181b4; 
     border-radius: 30px;
   }
   
   /* Handle on hover */
   .menu::-webkit-scrollbar-thumb:hover {
-    background: #014d66; 
+    background: #818181b4; 
     border-radius: 30px;
   }
 
